# url_shortener

./: .env  .env.railway  Procfile  RAILWAY_SETUP.md  docker-compose.yml  pyproject.toml  railway.toml  release.py  requirements.txt  url_shortener.db
alembic/: env.py
app/: database.py  main.py  models.py  schemas.py
app/api/: routes.py
app/services/: analytics_service.py  url_service.py
app/utils/: url_generator.py
static/: index.html
